# memex

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
develop/: memex.db
develop/vault/: 2026-06-05-agent-evals-youtube.md  2026-06-05-claim-extractor-principled-ai.md  2026-06-13-x-2064127981161959567.md  2026-06-13-x-2065460998668972188.md  2026-06-14-linkedin-agentskills-codingagents.md  2026-06-14-understand-anything.md  2026-06-14-x-2065880971031834786.md  2026-06-16-linkedin-mcp-codingagents.md  2026-06-16-x-2066595308629594363.md  2026-06-18-loop-library.md  2026-06-18-x-2066928783534289358.md  2026-06-19-x-2067677007140278630.md  2026-06-19-x-2068008743153832264.md  2026-06-23-linkedin-computervision-ml.md  2026-06-23-the-coming-loop.md  (+20 more)
docs/: ARCHITECTURE.md
tests/: conftest.py  fake_fetcher.py  fake_fetcher_pdf.py  fake_fetcher_youtube.py  fake_llm_client.py  fake_llm_client_failing.py  fake_llm_client_throws.py  fake_telegram_source.py  fake_validator_fails.py  fake_validator_warns.py  smoke_test.py  test_call_with_retry.py  test_canonical_key.py  test_capture.py  test_checks.py  test_checks_integration.py  test_confidence.py  test_derive.py  test_extract.py  test_fetcher.py  test_ingest.py  test_ingest_from_inbox.py  test_ingest_inbox.py  test_ingester.py  test_init.py  test_list.py  test_list_pending.py  test_llm_client.py  test_register.py  test_render.py  test_resolve.py  test_resolver.py  test_review.py  test_show.py  test_status.py  test_store.py  test_sync.py  test_synthesize.py  test_telegram_source.py  test_validate_derivation.py  (+1 more)
(+52 files in other folders)
